[DEV-13004] Fix icon button being squashed

--- a/packages/slate-editor/src/extensions/callout/components/CalloutElement.module.scss
+++ b/packages/slate-editor/src/extensions/callout/components/CalloutElement.module.scss
@@ -40,8 +40,12 @@
 
 .Icon {
     all: unset;
+
     width: 26px;
     height: 26px;
+    flex-shrink: 0;
+    flex-grow: 0;
+
     font-size: 19px;
     text-align: center;
     line-height: 26px;
